<refactored> majority of Android lint issues